# xmlcustomformatter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  input.xml  mkdocs.yml  output.xml  pyproject.toml  run.py  xmlcustomformatter.py
docs/: formatter.md  options.md  strings.md
src/xmlcustomformatter/: __init__.py  formatter.py  options.py  stringmanipulation.py
tests/: test_attributes.py  test_cdata.py  test_comments.py  test_document_types.py  test_elements.py  test_entities.py  test_example_files.py  test_formatter.py  test_formatter_comments.py  test_formatter_formatting.py  test_formatter_indentation.py  test_formatter_initialization.py  test_formatter_processing_instructions.py  test_formatter_xml_declarations.py  test_indentation.py  test_init.py  test_initialization.py  test_options.py  test_other.py  test_parsing.py  test_postprocessing.py  test_processing_instructions.py  test_stringmanipulation.py  test_text.py  test_xml_declarations.py
tests/example_files/: SSRQ-SG-III_4-24_all_container.xml  SSRQ-SG-III_4-24_all_inline.xml  SSRQ-SG-III_4-24_custom.xml  SSRQ-SG-III_4-24_formatted.xml  SSRQ-SG-III_4-24_unformatiert.xml
xmldomformatter/: cli.py  formatter.py  options.py  string_functions.py
xmldomformatter/helpers/: string_manipulation.py
