[project]
name = "xmlcustomformatter"
version = "0.1.0"
description = "A customizable formatter for XML-files"
readme = "README.md"
authors = [
    { name = "Christian Sonder", email = "christian.sonder@unisg.ch" },
    { name = "Bastian Politycki", email = "bastian.politycki@unisg.ch" },
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
xmlfmt = "xmlcustomformatter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100