[project]
name = "xmlcustomformatter"
version = "1.1.0"
description = "A customizable formatter for XML-files"
readme = "README.md"
authors = [
    { name = "Christian Sonder", email = "christian.sonder@unisg.ch" },
    { name = "Bastian Politycki", email = "bastian.politycki@unisg.ch" },
]
requires-python = ">=3.12"

[project.scripts]
xmlfmt = "xmlcustomformatter:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.pylint."messages control"]
disable = [
    "R0903", # too-few-public-methods
    "R0904", # too-many-public-methods
    "W0212", # access to protected members
]

[tool.uv]
package = true